# GreenDIRAC

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: deployment.yml
src/GreenDIRAC/: __init__.py
src/GreenDIRAC/WorkloadManagementSystem/Agent/: AverageCEEAgent.py  CIM2CSAgent.py  GreenReportingAgent.py  SiteDirector.py  SiteDirectorTest.py
src/GreenDIRAC/WorkloadManagementSystem/Client/: CIMClient.py  cim.conf
