[metadata]
name = greendirac
version = 0.1.0
author = GreenDIRAC
author_email = atsareg@in2p3.fr
description = GreenDIRAC is a DIRAC extension for the GreenDIGIT project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GreenDIGIT-project/GreenDIRAC
license = GPLv3
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    DIRAC ~= 8.0.75


[options.packages.find]
where = src

[options.entry_points]
dirac =
    metadata = GreenDIRAC:extension_metadata

